# frequenz-microgrid-formula-engine-rs

./: .copier-answers.yml  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_NOTES.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: python-ci.yaml  rust-ci.yaml
docs/: reference.md
frequenz/microgrid_formula_engine/: __init__.py  _rust_backend.pyi
src/: error.rs  expression.rs  formula_engine.rs  grammar.pest  lib.rs  parser.rs  python.rs  tests.rs  traits.rs
tests/: __init__.py  test_formula_engine.py
